crates/geometry/src/topology/snapshots/konstruo_geometry__topology__subdivision__tests__execute_example.snap
---
source: crates/geometry/src/topology/subdivision.rs
assertion_line: 172
expression: rectangles
---
- - - 0
    - 0
    - 0
  - - 1
    - 0
    - 0
  - - 1
    - 12
    - 0
  - - 0
    - 12
    - 0
- - - 1
    - 9
    - 0
  - - 2
    - 9
    - 0
  - - 2
    - 12
    - 0
  - - 1
    - 12
    - 0
- - - 1
    - 0
    - 0
  - - 2
    - 0
    - 0
  - - 2
    - 3
    - 0
  - - 1
    - 3
    - 0
- - - 2
    - 0
    - 0
  - - 3
    - 0
    - 0
  - - 3
    - 12
    - 0
  - - 2
    - 12
    - 0
- - - 3
    - 5
    - 0
  - - 4
    - 5
    - 0
  - - 4
    - 12
    - 0
  - - 3
    - 12
    - 0
- - - 3
    - 0
    - 0
  - - 4
    - 0
    - 0
  - - 4
    - 2
    - 0
  - - 3
    - 2
    - 0
- - - 4
    - 10
    - 0
  - - 5
    - 10
    - 0
  - - 5
    - 12
    - 0
  - - 4
    - 12
    - 0
- - - 4
    - 0
    - 0
  - - 5
    - 0
    - 0
  - - 5
    - 7
    - 0
  - - 4
    - 7
    - 0
- - - 5
    - 0
    - 0
  - - 6
    - 0
    - 0
  - - 6
    - 12
    - 0
  - - 5
    - 12
    - 0
- - - 8
    - 0
    - 0
  - - 9
    - 0
    - 0
  - - 9
    - 12
    - 0
  - - 8
    - 12
    - 0
- - - 9
    - 0
    - 0
  - - 11
    - 0
    - 0
  - - 11
    - 6
    - 0
  - - 9
    - 6
    - 0
- - - 11
    - 0
    - 0
  - - 12
    - 0
    - 0
  - - 12
    - 12
    - 0
  - - 11
    - 12
    - 0
