crates/geometry/src/topology/snapshots/konstruo_geometry__topology__subdivision__tests__execute_no_openings.snap
---
source: crates/geometry/src/topology/subdivision.rs
assertion_line: 197
expression: rectangles
---
- - - 0
    - 0
    - 0
  - - 10
    - 0
    - 0
  - - 10
    - 10
    - 0
  - - 0
    - 10
    - 0
