crates/geometry/src/topology/snapshots/konstruo_geometry__topology__subdivision__tests__execute_single_opening.snap
---
source: crates/geometry/src/topology/subdivision.rs
assertion_line: 226
expression: rectangles
---
- - - 0
    - 0
    - 0
  - - 3
    - 0
    - 0
  - - 3
    - 10
    - 0
  - - 0
    - 10
    - 0
- - - 3
    - 7
    - 0
  - - 7
    - 7
    - 0
  - - 7
    - 10
    - 0
  - - 3
    - 10
    - 0
- - - 3
    - 0
    - 0
  - - 7
    - 0
    - 0
  - - 7
    - 3
    - 0
  - - 3
    - 3
    - 0
- - - 7
    - 0
    - 0
  - - 10
    - 0
    - 0
  - - 10
    - 10
    - 0
  - - 7
    - 10
    - 0
